# uno-security

./: .gitignore  CMakeLists.txt  README.md
doc/: memory_consumption.txt
include/: Alarm.h  GsmModule.h  Keys.h  Phone.h  PhoneContext.h  PhoneState.h  Sim800Commands.h  UnoSecurity.h  Utils.h
include/gsm/: GsmListeners.h  GsmModule.h  GsmTypes.h  Sim800Commands.h
include/gsm/handlers/: IGsmPhoneHandler.h  PhoneHandler.h
include/gsm/tasks/: AbstractGsmTasks.h  CallTasks.h  CommandTask.h  GsmChainTask.h  SmsTasks.h
include/phone/: Phone.h  PhoneContext.h  PhoneState.h
include/phone/states/: DialingPhoneState.h  IncomingCallPhoneState.h  OnCallPhoneState.h  ReadyPhoneState.h
include/states/: DialingPhoneState.h  IncomingCallPhoneState.h  OnCallPhoneState.h  ReadyPhoneState.h
lib/: CMakeLists.txt
lib/Keypad/: CMakeLists.txt
lib/Keypad/examples/CustomKeypad/: CustomKeypad.ino
lib/Keypad/examples/DynamicKeypad/: DynamicKeypad.ino
lib/Keypad/examples/EventKeypad/: EventKeypad.ino
lib/Keypad/examples/HelloKeypad/: HelloKeypad.ino
lib/Keypad/examples/HelloKeypad3/: HelloKeypad3.ino
lib/Keypad/examples/MultiKey/: MultiKey.ino
lib/Keypad/examples/loopCounter/: loopCounter.ino
lib/LiquidCrystal_I2C/: CMakeLists.txt
lib/Logger/: .library.json  CMakeLists.txt
src/: GsmModule.cpp  Phone.cpp  UnoSecurity.cpp  UnoSecurity.ino  Utils.cpp
src/gsm/: GsmModule.cpp  GsmTypes.cpp
src/gsm/handlers/: PhoneHandler.cpp
src/gsm/tasks/: CallTasks.cpp  SmsTasks.cpp
src/phone/: Phone.cpp
src/phone/states/: DialingPhoneState.cpp  IncomingCallPhoneState.cpp  OnCallPhoneState.cpp  ReadyPhoneState.cpp
src/states/: DialingPhoneState.cpp  IncomingCallPhoneState.cpp  OnCallPhoneState.cpp  ReadyPhoneState.cpp
