cmake_minimum_required(VERSION 2.8.4)
set(CMAKE_TOOLCHAIN_FILE ${CMAKE_SOURCE_DIR}/cmake/ArduinoToolchain.cmake)
set(CMAKE_CXX_STANDARD 17)
set(PROJECT_NAME uno-security)
set(${PROJECT_NAME}_BOARD uno)
# set(ARDUINO_CPU)
project(${PROJECT_NAME})
file(GLOB SOURCES src/*.cpp)
file(GLOB HEADERS src/*.h)
set(${PROJECT_NAME}_SRCS ${SOURCES})
set(${PROJECT_NAME}_HDRS ${HEADERS})
# set(${PROJECT_NAME}_LIBS)
include_directories(${CMAKE_SOURCE_DIR}/include)
link_directories(${CMAKE_CURRENT_SOURCE_DIR}/lib)
# add_subdirectory()
# set(${PROJECT_NAME}_SKETCH src/UnoSecurity.cpp)
# set(${PROJECT_NAME}_PROGRAMMER avrispmkii)
set(${PROJECT_NAME}_PORT COM3)
# set(${PROJECT_NAME}_AFLAGS -v)
# set(uno.upload.speed 9600)
generate_arduino_firmware(${PROJECT_NAME})
